write_dists_for_all_routes_to_disk and generate_route_pairs functions completed and run

--- a/nextbus_data_exploration.ipynb
+++ b/nextbus_data_exploration.ipynb
@@ -215,11 +215,7 @@
    "outputs": [],
    "source": [
     "routeN = df[(df.route == 'N') & (df.direction.str.contains('I'))]\n",
-    "routeN['time_tmp'] = routeN.apply(lambda row: datetime.datetime(pd.to_datetime(row['time']).year, \n",
-    "                                                                   pd.to_datetime(row['time']).month, \n",
-    "                                                                   pd.to_datetime(row['time']).day, \n",
-    "                                                                   pd.to_datetime(row['time']).hour, \n",
-    "                                                                   pd.to_datetime(row['time']).minute), axis=1)\n",
+    "routeN['time_tmp'] = routeN.apply(lambda row: ), axis=1)\n",
     "routeN.index = routeN.time_tmp\n",
     "vehicleNumsRouteN = pd.unique(routeN.vehicle.ravel())"
    ]
