--- a/nextbus_database_generation.ipynb
+++ b/nextbus_database_generation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -79,16 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data from PostgreSQL database I've built with API calls\n",
-    "### Initial exploratory analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Write generate_route_pair function \n",
-    "Pulls data from SQL database, computes entry in final database, which is pairs subsequent buses on the same route"
+    "## Load data from SQL database (necessary only to load Muni routes)"
    ]
   },
   {
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -139,95 +130,11 @@
     "db_con = None\n",
     "db_con = psycopg2.connect(database = dbname, user = username)\n",
     "# the table name is 'nextbus':\n",
-    "sql_query = \"\"\"\n",
-    "SELECT * FROM {table};\n",
-    "\"\"\".format(table=table)\n",
-    "nbdata = pd.read_sql_query(sql_query,db_con)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "nbdata.drop(nbdata.index[0], inplace=True)\n",
-    "nbdata.drop(nbdata.index[-1], inplace=True)\n",
-    "#nbdata.columns = ['vehicle','received_time','gps_time','gpsfix','speed','heading','route','trip']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "routeslist = pd.unique(nbdata['route'].ravel())\n",
-    "list_of_muni_routes = pd.DataFrame(data=routeslist, index = range(len(routeslist)), columns=['route'])\n",
-    "\n",
-    "# Clean up a bit\n",
-    "list_of_muni_routes = list_of_muni_routes[(list_of_muni_routes.route.isnull() == False) & (list_of_muni_routes.route != 'Inspectors') & (list_of_muni_routes.route != 'Training')]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we write the function here. Idea: run over 'list_of_muni_routes', for each route, create the pairs (there will be many) of entries (this is done in various sections of code below), write them to a SQL database, db and table of your choice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# this function generates a table of pairs for a given route\n",
-    "# assume a database connection is already established\n",
-    "def generate_route_pairs(route, database_connection, table):\n",
-    "    sql_query = '''SELECT * FROM {table} WHERE route = {route};'''.format(table=table,route=route)\n",
-    "    df_route = pd.read_sql_query(sql_query, database_connection)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Some clean up of this data: remove all whitespaces in file, drop first row, rename columns so they are free of whitespaces, get GPS coordinates separately"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we redefine the lat, lon coordinates into separate columns, and drop the old 'gpsfix' column. Finally, we reinterpret the times and coarse-grain to the minute (LATER: do to the half-minute)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plan: merge the two tables with only their lat longs (time stamps included in index), compute distance on that table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 331,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dist1 = pd.merge(left=trip_0[['lat','lon','time']],right=trip_1[['lat','lon','time']],on='time').apply(lambda row: haversine(row['lat_x'],row['lon_x'],row['lat_y'],row['lon_y']), axis=1)\n",
-    "dist2 = pd.merge(left=trip_1[['lat','lon','time']],right=trip_2[['lat','lon','time']],on='time').apply(lambda row: haversine(row['lat_x'],row['lon_x'],row['lat_y'],row['lon_y']), axis=1)"
+    "# only run this code if the list_of_muni_routes needs to be reestablished\n",
+    "# sql_query = \"\"\"\n",
+    "# SELECT * FROM {table};\n",
+    "# \"\"\".format(table=table)\n",
+    "# nbdata = pd.read_sql_query(sql_query,db_con)"
    ]
   },
   {
@@ -238,130 +145,213 @@
    },
    "outputs": [],
    "source": [
-    "coords_dict = {}\n",
-    "for i in range(len(trips_in_order_30)):\n",
-    "    my_key = \"trip_\"+str(i)\n",
-    "    if my_key not in coords_dict:\n",
-    "        coords_dict[my_key] = 0\n",
+    "# routeslist = pd.unique(nbdata['route'].ravel())\n",
+    "# list_of_muni_routes = pd.DataFrame(data=routeslist, index = range(len(routeslist)), columns=['route'])\n",
     "\n",
-    "for i in range(len(trips_in_order_30)):\n",
-    "    trip_temp = 'trip_'+str(i)\n",
-    "    tmp_vehicles = pd.unique(route30[(route30.trip == trips_in_order_30[i])].vehicle.ravel())\n",
-    "    coords_dict[trip_temp] = route30[(route30.trip == trips_in_order_30[i]) & (route30.vehicle == tmp_vehicles[0])][['lat','lon','time']]\n",
-    "    coords_dict[trip_temp].drop_duplicates(subset='time', inplace=True)\n",
-    "    coords_dict[trip_temp].index = coords_dict[trip_temp].time"
+    "# # Clean up a bit\n",
+    "# list_of_muni_routes = list_of_muni_routes[(list_of_muni_routes.route.isnull() == False) & (list_of_muni_routes.route != 'Inspectors') & (list_of_muni_routes.route != 'Training')]\n",
+    "# list_of_muni_routes = list_of_muni_routes[list_of_muni_routes.route != '']\n",
+    "# np.save('list_of_muni_routes',np.asarray(list_of_muni_routes).ravel())\n",
+    "list_of_muni_routes = np.load('list_of_muni_routes.npy')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now make a dataframe that has time stamps and distances, by computing successive differences between each pair of trips, then appending (with pd.concat) each collection of (time, distance) of each pair of trips to the empty dist dataframe, which will end up containing all distances from pairs of trips on the route 30"
+    "## Compute distance distributions for each route"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dist=pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# substract one from length of trip_in_order_30 so that final pair of trips doesn't go outside index range\n",
-    "#for i in range(len(trips_in_order_30)-1):\n",
-    "for i in range(len(trips_in_order_30)-1):\n",
-    "    trip_now = 'trip_'+str(i)\n",
-    "    trip_next = 'trip_'+str(i+1)\n",
-    "    #print 'Merging {trip1} and {trip2}'.format(trip1=trip_now,trip2=trip_next)\n",
-    "    tmp = pd.merge(left=coords_dict[trip_now],right=coords_dict[trip_next],on='time')\n",
-    "    if tmp.shape[0] != 0:\n",
-    "        tmp['dist'] = tmp.apply(lambda row: haversine(row['lat_x'],row['lon_x'],row['lat_y'],row['lon_y']), axis=1)\n",
-    "        dist = pd.concat([dist, tmp[['time','dist']]])\n",
-    "    else:\n",
-    "        continue\n",
-    "\n",
-    "dist.index = range(len(dist))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Let's combine this into a single function that takes a given route and spits out the above dataframe of distances for that route\n",
-    "\n",
-    "The dataframe has a list of distances between successive trips for that route.\n",
-    "\n",
-    "This presumes that you are using the cleaned nbdata dataframe from above (which had all the precleaning done and takes ~10 minutes to run each time one restarts the notebook)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# All documentation for this function can be found in the exploration I did above for route 30 specifically\n",
-    "def compute_dists_for_route(route_num):\n",
-    "    route_dat = nbdata[(nbdata.route == route_num)]\n",
-    "    vehicles_for_route = pd.unique(route_dat.vehicle.ravel())\n",
-    "    trips_in_order_for_route = np.sort(pd.unique(route_dat.trip.ravel()))\n",
+    "def write_dists_for_all_routes_to_disk():\n",
+    "    def compute_dists_for_route(route_num, database_connection, table_to_read):\n",
+    "        sql_query = '''SELECT * FROM {table} WHERE route = \\'{route}\\';'''.format(table=table_to_read,route=route_num)\n",
+    "        \n",
+    "        route_dat = pd.read_sql_query(sql_query, database_connection)\n",
+    "        \n",
+    "        # Need to coarse-grain the time\n",
+    "        route_dat.time = route_dat.apply(lambda row: compute_datetime(row['time']), axis=1)\n",
+    "\n",
+    "        trips_in_order_for_route = np.sort(pd.unique(route_dat[route_dat.trip != ''].trip.ravel()))\n",
+    "\n",
+    "        coords_dict = {}\n",
+    "        for i in range(len(trips_in_order_for_route)):\n",
+    "            my_key = \"trip_\"+str(i)\n",
+    "            if my_key not in coords_dict:\n",
+    "                coords_dict[my_key] = 0\n",
+    "\n",
+    "        for i in range(len(trips_in_order_for_route)):\n",
+    "            trip_temp = 'trip_'+str(i)\n",
+    "            tmp_vehicles = pd.unique(route_dat[(route_dat.trip == trips_in_order_for_route[i])].vehicle.ravel())\n",
+    "            coords_dict[trip_temp] = route_dat[(route_dat.trip == trips_in_order_for_route[i]) & (route_dat.vehicle == tmp_vehicles[0])][['lat','lon','time']]\n",
+    "            coords_dict[trip_temp].drop_duplicates(subset='time', inplace=True)\n",
+    "            coords_dict[trip_temp].index = coords_dict[trip_temp].time\n",
+    "\n",
+    "        dist_tmp = pd.DataFrame()\n",
+    "\n",
+    "        for i in range(len(trips_in_order_for_route)-1):\n",
+    "            trip_now = 'trip_'+str(i)\n",
+    "            trip_next = 'trip_'+str(i+1)\n",
+    "            #print 'Merging {trip1} and {trip2}'.format(trip1=trip_now,trip2=trip_next)\n",
+    "            tmp = pd.merge(left=coords_dict[trip_now],right=coords_dict[trip_next],on='time')\n",
+    "            if tmp.shape[0] != 0:\n",
+    "                tmp['dist'] = tmp.apply(lambda row: haversine(row['lat_x'],row['lon_x'],row['lat_y'],row['lon_y']), axis=1)\n",
+    "                dist_tmp = pd.concat([dist_tmp, tmp[['time','dist']]])\n",
+    "            else:\n",
+    "                continue\n",
+    "\n",
+    "        dist_tmp.index = range(len(dist_tmp))\n",
+    "\n",
+    "        return dist_tmp\n",
     "    \n",
+    "    route_hist_dict={}\n",
+    "    for i in list_of_muni_routes:\n",
+    "            my_key = 'route_'+str(i)\n",
+    "            if my_key not in route_hist_dict:\n",
+    "                route_hist_dict[my_key] = 0\n",
+    "    #build a dict here, then fill in each element of the dict \n",
+    "    #   with the corresponding 'compute_dists_for_route' so \n",
+    "    #   we have everything ready to go for each route\n",
+    "    for route_num in list_of_muni_routes:\n",
+    "        temp_Route = 'route_'+str(route_num)\n",
+    "        route_hist_dict[temp_Route] = compute_dists_for_route(route_num, db_con, 'nextbus_write_2016_01_15')\n",
+    "        if len(route_hist_dict[temp_Route]) != 0:\n",
+    "            path_to_file = 'muni_route_distance_distributions/'+temp_Route+'_distribution'\n",
+    "            np.save(path_to_file,np.asarray(route_hist_dict[temp_Route]['dist']).ravel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each route in the Muni list, write the array of distances between pairs of buses to disk for reading later from the directory './muni_route_distance_distributions'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "write_dists_for_all_routes_to_disk()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write distance pairs to database with generate_route_pair function \n",
+    "Pulls data from SQL database, computes entry in final database, which is pairs subsequent buses on the same route\n",
+    "\n",
+    "Now we write the function here. Idea: run over 'list_of_muni_routes', for each route, create the pairs (there will be many) of entries (this is done in various sections of code below), write them to a SQL database, db and table of your choice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# To convert the timestamps from SQL database to datetime objects\n",
+    "def compute_datetime(timestamp):\n",
+    "    return datetime.datetime(pd.to_datetime(timestamp).year, \n",
+    "                   pd.to_datetime(timestamp).month, \n",
+    "                   pd.to_datetime(timestamp).day, \n",
+    "                   pd.to_datetime(timestamp).hour, \n",
+    "                   pd.to_datetime(timestamp).minute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# this function generates a table of pairs for a given route\n",
+    "# assume a database connection is already established\n",
+    "def generate_route_pairs(route, psycopg2_engine, database_connection, table_to_read, table_to_write):\n",
+    "    '''route: Muni route you want to generate data for\n",
+    "    psycopg2_engine: engine (postgreSQL) you wish to use to write data to\n",
+    "    database_connection: database that engine provides connection to where you will write\n",
+    "    table_to_read: grab route data from this table\n",
+    "    table_to_write: write bus pair data to this table'''\n",
+    "    sql_query = '''SELECT * FROM {table} WHERE route = \\'{route}\\';'''.format(table=table_to_read,route=route)\n",
+    "    df_route = pd.read_sql_query(sql_query, database_connection)\n",
+    "    \n",
+    "    # Need to coarse-grain the time\n",
+    "    df_route.time = df_route.apply(lambda row: compute_datetime(row['time']), axis=1)\n",
+    "    \n",
+    "    route_trips = np.sort(pd.unique(df_route[df_route.trip != ''].trip.ravel()))\n",
+    "   \n",
     "    coords_dict = {}\n",
-    "    for i in range(len(trips_in_order_for_route)):\n",
+    "    for i in range(len(route_trips)):\n",
     "        my_key = \"trip_\"+str(i)\n",
     "        if my_key not in coords_dict:\n",
     "            coords_dict[my_key] = 0\n",
-    "\n",
-    "    for i in range(len(trips_in_order_for_route)):\n",
+    "            \n",
+    "    # some editing to be done here\n",
+    "    for i in range(len(route_trips)):\n",
     "        trip_temp = 'trip_'+str(i)\n",
-    "        tmp_vehicles = pd.unique(route_dat[(route_dat.trip == trips_in_order_for_route[i])].vehicle.ravel())\n",
-    "        coords_dict[trip_temp] = route_dat[(route_dat.trip == trips_in_order_for_route[i]) & (route_dat.vehicle == tmp_vehicles[0])][['lat','lon','time']]\n",
+    "        tmp_vehicles = pd.unique(df_route[(df_route.trip == route_trips[i])].vehicle.ravel())\n",
+    "        coords_dict[trip_temp] = df_route[(df_route.trip == route_trips[i]) & (df_route.vehicle == tmp_vehicles[0])]\n",
     "        coords_dict[trip_temp].drop_duplicates(subset='time', inplace=True)\n",
     "        coords_dict[trip_temp].index = coords_dict[trip_temp].time\n",
     "        \n",
-    "    dist_tmp = pd.DataFrame()\n",
     "    \n",
-    "    for i in range(len(trips_in_order_for_route)-1):\n",
+    "    #dist_tmp = pd.DataFrame()\n",
+    "    \n",
+    "    # Compute the distance between each\n",
+    "    def compute_distance_percentile(route_num, lat1, lon1, lat2, lon2):\n",
+    "        tmp_dist = haversine(lat1,lon1,lat2,lon2)\n",
+    "        path_to_dist_distribution = 'muni_route_distance_distributions/route_'+str(route_num)+'_distribution.npy'\n",
+    "        route_dist_distribution = np.load(path_to_dist_distribution)\n",
+    "        percentile_score = 1 - stats.percentileofscore(route_dist_distribution, tmp_dist)/100\n",
+    "        return percentile_score\n",
+    "    \n",
+    "    for i in range(len(route_trips)-1):\n",
     "        trip_now = 'trip_'+str(i)\n",
     "        trip_next = 'trip_'+str(i+1)\n",
     "        #print 'Merging {trip1} and {trip2}'.format(trip1=trip_now,trip2=trip_next)\n",
     "        tmp = pd.merge(left=coords_dict[trip_now],right=coords_dict[trip_next],on='time')\n",
     "        if tmp.shape[0] != 0:\n",
-    "            tmp['dist'] = tmp.apply(lambda row: haversine(row['lat_x'],row['lon_x'],row['lat_y'],row['lon_y']), axis=1)\n",
-    "            dist_tmp = pd.concat([dist_tmp, tmp[['time','dist']]])\n",
+    "            tmp['dist_percentile'] = tmp.apply(lambda row: compute_distance_percentile(route, row['lat_x'],row['lon_x'],row['lat_y'],row['lon_y']), axis=1)\n",
+    "            # Write this tuple to the SQL table\n",
+    "            tmp.to_sql(table_to_write, psycopg2_engine, if_exists='append')\n",
     "        else:\n",
-    "            continue\n",
-    "\n",
-    "    dist_tmp.index = range(len(dist_tmp))\n",
-    "    \n",
-    "    return dist_tmp"
+    "            continue"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List of all routes available in the Muni system, so we can just choose from this list."
+    "Now for each route, add to the 'final' database an entry for each pair in that route"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "Create a dict of these dataframes for **each** route in the list_of_muni_routes"
+    "for route_num in list_of_muni_routes:\n",
+    "    generate_route_pairs(str(route_num), engine, db_con, 'nextbus_write_2016_01_15', 'vehicle_pairs_2016_01_15')"
    ]
   },
   {
