Fixed freq column in get_upcoming_vehicle.info.py and cleaned up a bit

--- a/nextbus_pull_from_remote_database.ipynb
+++ b/nextbus_pull_from_remote_database.ipynb
@@ -24,17 +24,6 @@
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy_utils import database_exists, create_database\n",
     "\n",
-    "# json and XML parsing\n",
-    "import json\n",
-    "from pprint import pprint\n",
-    "from urllib2 import urlopen\n",
-    "from pyquery import PyQuery as pq\n",
-    "\n",
-    "# for making maps\n",
-    "import geoplotlib\n",
-    "from geoplotlib.utils import BoundingBox\n",
-    "from IPython.display import Image\n",
-    "\n",
     "# all purpose data analysis and plotting\n",
     "from scipy import stats\n",
     "import pandas as pd\n",
@@ -255,12 +244,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Separate the data into training and testing"
    ]
@@ -280,12 +265,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Encode the data and then pass it as a matrix:"
    ]
@@ -349,7 +330,6 @@
    },
    "outputs": [],
    "source": [
-    "# Fit the training data to the Survived labels and create the decision trees\n",
     "rfr = forest.fit(xtrain,ytrain.ravel())"
    ]
   },
@@ -704,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -721,8 +701,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE Scores: [0.1523665599813207, 0.14842906326121305, 0.1532475498905036]\n",
-      "Mean RMSE: 0.151347724378\n"
+      "RMSE Scores: [0.15272060309043903, 0.14848529016599191, 0.15322698294826986]\n",
+      "Mean RMSE: 0.151477625402\n"
      ]
     },
     {
@@ -1432,6 +1412,69 @@
     "ax.set_ylim(0,1)\n",
     "ax.legend(loc=2, fontsize = 16)\n",
     "ax.tick_params(labelsize =20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bashCommand = 'date \\'+%Y_%m_%d\\''\n",
+    "process = subprocess.Popen(bashCommand.split(), stdout=subprocess.PIPE)\n",
+    "today = process.communicate()[0]\n",
+    "print today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "today = subprocess.check_output(['date','+%Y_%m_%d']).rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016_02_04\n"
+     ]
+    }
+   ],
+   "source": [
+    "print today"
    ]
   },
   {
