Made front end work on Chrome, added a bit more verbose error-catching

--- a/nextbus_pull_from_remote_database.ipynb
+++ b/nextbus_pull_from_remote_database.ipynb
@@ -472,6 +472,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also display this as a heat map, if I do it right:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
