minor edit in busUnBunchr_model_construction.ipynb

--- a/busUnBunchr_model_construction.ipynb
+++ b/busUnBunchr_model_construction.ipynb
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -1787,8 +1787,42 @@
       "         1           0.0374            5.45m\n",
       "         2           0.0374            5.59m\n",
       "         3           0.0374            5.73m\n",
-      "         4           0.0374            5.92m"
+      "         4           0.0374            5.92m\n",
+      "         5           0.0373            6.15m\n",
+      "         6           0.0373            6.10m\n",
+      "         7           0.0373            6.20m\n",
+      "         8           0.0373            6.20m\n",
+      "         9           0.0372            6.14m\n",
+      "        10           0.0372            6.06m\n",
+      "        20           0.0370            5.66m\n",
+      "        30           0.0367            5.44m\n",
+      "        40           0.0365            5.26m\n",
+      "        50           0.0363            5.11m\n",
+      "        60           0.0360            4.96m\n",
+      "        70           0.0358            4.83m\n",
+      "        80           0.0356            4.72m\n",
+      "        90           0.0354            4.61m\n",
+      "       100           0.0352            4.50m\n",
+      "       200           0.0333            3.38m\n",
+      "       300           0.0317            2.24m\n",
+      "       400           0.0304            1.11m\n",
+      "       500           0.0293            0.00s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(alpha=0.9, init=None, learning_rate=0.001,\n",
+       "             loss='ls', max_depth=3, max_features=None,\n",
+       "             max_leaf_nodes=None, min_samples_leaf=1, min_samples_split=1,\n",
+       "             min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+       "             presort='auto', random_state=None, subsample=1.0, verbose=1,\n",
+       "             warm_start=False)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
